# AMR-Project

./: .gitignore
docs/: frames_2026-04-22_06.39.56.gv  mission_logic.md
src/amr_bringup/: package.xml  setup.py
src/amr_bringup/config/: ros_gz_bridge.yaml  rviz_phase3.rviz
src/amr_bringup/launch/: bridges.launch.py  full_robot.launch.py
src/amr_interfaces/: CMakeLists.txt  package.xml
src/amr_interfaces/msg/: Mission.msg  MissionStatus.msg
src/amr_mission/: package.xml  setup.py
src/amr_mission/amr_mission/: mission_gui_node.py  mission_logic.py  mission_planner_node.py
src/amr_mission/test/: test_mission_logic.py
src/amr_navigation/: package.xml  setup.py
src/amr_navigation/amr_navigation/: landmark_db.py
src/amr_navigation/test/: test_landmark_db.py
src/amr_perception/: package.xml  setup.py
src/amr_perception/amr_perception/: qr_utils.py
src/amr_perception/test/: test_qr_utils.py
src/amr_robot_description/: package.xml  setup.cfg  setup.py
src/amr_robot_description/.backup/: model.sdf.phase2_backup
src/amr_robot_description/models/service_robot/: model.config  model.sdf
src/amr_robot_description/urdf/: service_robot.urdf.xacro
src/amr_slam/: package.xml  setup.py
src/amr_town_world/: package.xml  setup.cfg  setup.py
src/amr_town_world/worlds/: test_world.sdf
src/amr_traffic/: package.xml  setup.py
