<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_robot_description</name>
  <version>0.0.0</version>
  <description>AMR Final Project - amr_robot_description (SDF model + URDF/xacro)</description>
  <maintainer email="student@aub.edu.lb">vboxuser</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <!-- xacro for URDF preprocessing (used in full_robot.launch.py) -->
  <exec_depend>xacro</exec_depend>

  <!-- robot_state_publisher consumes the expanded URDF -->
  <exec_depend>robot_state_publisher</exec_depend>

  <!-- Test tooling (unchanged from template) -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
